# PhantomHand

./: .gitignore  LICENSE  README.md
docs/: BUILD.md
python_service/: PhantomHandBackend.spec  main.py  requirements.txt  server.py
python_service/config/: __init__.py  settings.py
python_service/core/: __init__.py  action.py  capture.py  detector.py  gesture.py  state_machine.py
python_service/platform/: __init__.py
scripts/: build-windows.bat  build-windows.ps1
tauri_app/: index.html  package.json  vite.config.ts
tauri_app/src/: App.tsx  main.tsx
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/src/: main.rs
tauri_app/src/canvas/: HandVisualization.tsx
tauri_app/src/components/: CameraPreview.tsx  ControlPanel.tsx  StatusPanel.tsx
tauri_app/src/stores/: handStore.ts
tauri_app/src/styles/: global.css
tauri_app/src/types/: index.ts
