[package]
name = "phantom-hand"
version = "0.1.0"
description = "PhantomHand - 手势控制桌面应用"
authors = ["PhantomHand Team"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "shell-sidecar",
    "system-tray",
    "window-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
